# godata

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  README.rst  pyproject.toml  readthedocs.yaml  test_godata.sh  test_list.py
.github/workflows/: ci.yml  upload-server.yml
docs/source/: conf.py  index.rst  project.rst
godata/: __init__.py  client.py  config.py  errors.py  ie.py  project.py  utils.py
godata/cli/: cli.py  ie.py  project.py  server.py  utils.py
godata/client/: __init__.py  client.py  parser.py  unixsocket.py
godata/files/: __init__.py  locking.py  utils.py
godata/io/: __init__.py  fitsio.py  jsonio.py  numpyio.py  pandasio.py  polarsio.py
godata/server/: __init__.py  cmd.py  config.py  install.py
precommit/: check_versions.py
src/: api.rs  commands.rs  connections.rs  db.rs  errors.rs  fsystem.rs  ftree.rs  handlers.rs  io.rs  lib.rs  locations.rs  log.rs  main.rs  mdb.rs  operations.rs  pdb.rs  project.rs  routes.rs  server.rs  storage.rs  vfsio.rs  vsys.rs
src/fsys/: fsystem.rs  mod.rs
src/fsystem/: errors.rs  fsystem.rs  mod.rs
src/routes/: files.rs  mod.rs  projects.rs
tests/: Dockerfile  io.py  run_tests.sh  test_cli.py  test_data.npy  test_files.py  test_io.py  test_projects.py  test_requirements.txt  test_server.py
tests/test_data/: test_df.csv
tests/test_io/: test_fits.py  test_json.py  test_numpy.py  test_pandas.py  test_polars.py  utils.py
tests/test_io/test_data/: test_fits.fits  test_json.json
