[package]
name = "godata_lib"
version = "0.2.2"
edition = "2021"
description = "Data management for the busy scientists. Designed to be used from python"
homepage = "https://github.com/PatrickRWells/godata"
repository = "https://github.com/PatrickRWells/godata"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
    "godata/*",
    "tests/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "godata"
crate-type = ["rlib", "cdylib"]

[dependencies]
directories = "5.0.1"
nanoid = "0.4.0"
pyo3 = "0.19.2"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.106"
serde_rusqlite = "0.33.1"
