[package]
name = "godata_server"
version = "0.8.0"
edition = "2021"
description = "Data management for the busy scientists. Designed to be used from python"
homepage = "https://github.com/PatrickRWells/godata"
repository = "https://github.com/PatrickRWells/godata"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
    "godata/*",
    "tests/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
ciborium = "0.2.1"
clap = { version = "4.4.11", features = ["derive"] }
directories = "5.0.1"
fs_extra = "1.3.0"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.106"
sled = "0.34.7"
tokio = {features = ["full"]}
tokio-stream = { version = "0.1.14", features = ["net"] }
uuid = { version = "1.5.0", features = ["v4"] }
warp = "0.3.6"
zerocopy = { version = "0.7.25", features = ["derive"] }
