[package]
name = "godata_server"
version = "0.9.0"
edition = "2021"
description = "Data management for the busy scientists. Designed to be used from python"
homepage = "https://github.com/PatrickRWells/godata"
repository = "https://github.com/PatrickRWells/godata"
readme = "README.md"
license = "MIT OR Apache-2.0"
exclude = [
    "godata/*",
    "tests/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
chrono = "0.4.34"
ciborium = "0.2.1"
clap = { version = "4.4.11", features = ["derive"] }
directories = "5.0.1"
fs_extra = "1.3.0"
once_cell = "1.19.0"
regex = "1.10.4"
serde = {version = "1.0.188", features = ["derive"]}
serde_json = "1.0.106"
sled = "0.34.7"
sysinfo = "0.30.5"
tokio = {version = "1.36.0", features = ["full"]}
tokio-stream = { version = "0.1.14", features = ["net"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.5.0", features = ["v4"] }
warp = "0.3.6"
zerocopy = { version = "0.7.25", features = ["derive"] }
